# MCP-Office

./: .env.example  .gitignore  LICENSE  README.md  informe-editor-ia-office-python.md  pyproject.toml  requirements.txt
docs/: Excel.README.md  Excel.TODO.md  PowerPoint.README.md  PowerPoint.TODO.md  Word.README.md  Word.TODO.md  architecture.md
scripts/: test_mcp_powerpoint.py  test_mcp_powerpoint_visual.py
src/office_ai_mcp/: __main__.py  config.py  excel_server.py  powerpoint_server.py  server.py  word_server.py
src/office_ai_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/office_ai_mcp/models/: requests.py  responses.py
src/office_ai_mcp/services/: base.py  excel_service.py  powerpoint_service.py  word_service.py
src/office_ai_mcp/tools/: excel_tools.py  powerpoint_tools.py  registry.py  system_tools.py  word_tools.py
src/office_ai_mcp/utils/: backups.py  com_cleanup.py  logging.py  paths.py
tests/: test_backups.py  test_paths.py  test_powerpoint_helpers.py  test_powerpoint_visual_helpers.py
